--- a/assets/scss/partials/_navbar.scss
+++ b/assets/scss/partials/_navbar.scss
@@ -1,12 +1,104 @@
+
 .navbar{
+    
+    .navbar-brand{
+        margin-right: 0;
+    }
+
+    padding: 0 ;
+   max-width: 90%;
+    img{
+        height: 27px;
+        padding-left: 20px;
+    }
 
     ul{
+        align-items: flex-end;
         li{
             font-family: $secondaryFont;
             text-transform: uppercase;
             font-size: 12px;
             font-weight: bold;
-            margin-right: 25px;
+            padding: 16px 10px;
+
+
+            a{
+                color: black!important;
+                @include transition(.5s);
+                &:hover{
+                    color: $mainColor!important;
+                    @include transition(.5s)
+                }
+            }
+        }
+
+        li.cart{
+            border-left: 1px solid #eee;
+            &:hover{
+                li.show{
+
+                    display: block;
+                }
+            }
+            
+            a{
+                i{
+                    font-size: 20px;
+                }
+
+                &::after{
+                    display: none;
+                }
+            }
+
+            
+
+
+        }
+
+        li.account{
+            border-left: 1px solid #eee;
+
+            a{
+
+                i{
+                    font-size: 20px;
+                }
+                &::after{
+                display: none;
+            
+            }
+            }
+        }
+
+        li.booking-txt{
+            &:hover{
+                background-color: $mainColor;
+                @include transition(.5s);
+
+                p{
+                    color:white;
+                }
+            }
+            a{
+                text-decoration: none;
+               
+            }
+            padding-right: 20px;
+            padding-left: 20px;
+
+            border-left: 1px solid #eee;
+            p{
+                letter-spacing: 2px;
+                font-size: 10px;
+                margin-bottom: 0;
+                padding-top: 7px;
+                color: #666;
+                
+                text-decoration: none;
+            }
+
+            @include transition(.5s)
         }
     }
 }
