--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,3 +1,6 @@
 @import "./partials/variables";
 @import "./partials/baseFeatures";
+@import "./partials/mixin";
+@import "./partials/prenavbar";
 @import "./partials/navbar";
+@import "./partials/intro";
