--- a/assets/scss/partials/_intro.scss
+++ b/assets/scss/partials/_intro.scss
@@ -1,5 +1,6 @@
 #intro{
     height: 100vh;
+    padding: 25px 0;
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
@@ -7,6 +8,8 @@
     background-position: center;
     align-items: center;
     position: relative;
+    display: flex;
+    align-items: center;
 
     &::before{
         content: "";
@@ -16,5 +19,187 @@
         position: absolute;
         top: 0;
         left: 0;
+    }
+
+
+    .welcome-content{
+        margin-top: 20%;
+        
+    
+        p{
+            font-style:italic;
+            font-size: 16px;
+            
+        }
+    
+        h1{
+            font-family: $secondaryFont;
+            font-weight: 800;
+            font-size: 50px;
+        }
+        a.menu-btn{
+            @extend %mainbtn;
+
+            
+        }
+
+        
+    }
+
+    .video-side{
+        margin-top: 20%;
+        display: flex;
+        align-items: baseline;
+
+     .link{
+         position: relative;
+
+         &::before{
+             position: absolute;
+             content: "";
+             height: 70px;
+             width: 70px;
+             text-align: center;
+             line-height: 70px;
+             background-color: rgba(255, 255, 255, 0.199);
+             border-radius: 50%;
+             font-size: 10px;
+             left: 3px;
+             top: -3px;
+             @include transition(.3s);
+         }
+
+         &:hover{
+            &::before{
+            height: 90px;
+            width: 90px;
+            line-height: 90px;
+            @include transition(.3s);
+            left: -7px;
+            top: -12px;
+
+        }
+         }
+      
+        a{
+            text-decoration: none;
+          position: relative;
+             
+          i{
+            height: 50px;
+            width: 50px;
+            text-align: center;
+            line-height: 50px;
+            background-color: $mainColor;
+            border-radius: 50%;
+            font-size: 10px;
+          }
+            
+            
+            
+
+           
+        
+              
+        }
+        
+        
+    }
+
+     
+        p{
+            display: inline;
+            font-style: italic;
+            font-size: 14px;
+        }
+    }
+
+    .section-footer-content{
+        
+      margin-top: 10%;
+        display: flex;
+        justify-content: space-between;
+        
+
+        .wrapper{
+            align-items: center;
+
+        }
+        .mouse{
+            width: 20px;
+            height: 30px;
+            border-radius: 6px;
+            padding: 0 6px;
+            border: 2px solid #fff;
+            box-sizing: border-box;
+            position: relative;
+            z-index: 10;
+            
+
+            .yellow-dot{
+                
+                    position: relative;
+                    left: 50%;
+                    top: 6px;
+                    margin-left: -2px;
+                    width: 4px;
+                    height: 4px;
+                    background: $mainColor;
+                    border-radius: 4px;
+                    animation-name: scrolling;
+                    animation-duration: 2.2s;
+                    animation-timing-function: cubic-bezier(.15, .41, .69, .94);
+                    animation-iteration-count: infinite;
+            }
+
+            
+        }
+
+        span.scroll-text{
+            font-size: 12px;
+            font-weight: 700;
+            font-family: $secondaryFont;
+            margin-left: 10px;
+            
+        }
+
+        a.down-icon{
+            text-decoration: none;
+            color: #fff;
+            cursor: pointer;
+           
+            @include transition(.4s);
+            i{
+                font-size: 19px;
+                &:hover{
+                    color: $mainColor;
+                    @include transition(.4s);
+                }
+            }
+            
+        }
+    }
+
+    .section-footer{
+        height: 40px;
+        position: absolute;
+        left: 0;
+        z-index: 20;
+        width: 100%;
+        bottom: 0;
+    }
+
+    @keyframes scrolling {
+        0% {
+            opacity: 0;
+        }
+        10% {
+            transform: translateY(0);
+            opacity: 1;
+        }
+        100% {
+            transform: translateY(10px);
+            opacity: 0;
+        }
     }
 }
