--- a/assets/scss/partials/_mixin.scss
+++ b/assets/scss/partials/_mixin.scss
@@ -3,3 +3,31 @@
     -ms-transition: $property;
     transition: $property;
 }
+
+@mixin title{
+     p{
+         color: $mainColor;
+         font-style: italic;
+         font-size: 18px;
+         font-weight: 500;
+         padding-bottom: 10px;
+     }
+
+     h1{
+        font-size: 30px;
+        font-weight: 700;
+        color: #323246;
+        margin-bottom: 1rem;
+     }
+}
+
+@mixin dots{
+    ul{
+       display: flex;
+            
+         li:not(:last-child){margin-right: 7px;
+        font-weight: 700;}
+        
+    }
+}
+
