--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,6 +1,8 @@
 @import "./partials/variables";
-@import "./partials/baseFeatures";
 @import "./partials/mixin";
+@import "./partials/baseFeatures";
 @import "./partials/prenavbar";
 @import "./partials/navbar";
 @import "./partials/intro";
+@import "./partials/story";
+@import "./partials/opening";
