--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -6,3 +6,6 @@
 @import "./partials/intro";
 @import "./partials/story";
 @import "./partials/opening";
+@import "./partials/service";
+@import "./partials/chefs";
+@import "./partials/footer";
