--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -14,10 +14,10 @@ header {
 }
 
 .container {
-  max-width: 1260px !important;
+  max-width: 1245px !important;
 }
 
-#intro .welcome-content a.menu-btn, #story .story-content a.explore-btn {
+#intro .welcome-content a.menu-btn, #story .story-content a.explore-btn, #service .link a, #chefs .recipe-box a {
   padding: 13px 28px;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid #C19D60;
@@ -32,11 +32,11 @@ header {
   outline: 0;
 }
 
-#intro .welcome-content a.menu-btn .icon, #story .story-content a.explore-btn .icon {
+#intro .welcome-content a.menu-btn .icon, #story .story-content a.explore-btn .icon, #service .link a .icon, #chefs .recipe-box a .icon {
   margin-left: 15px;
 }
 
-#intro .welcome-content a.menu-btn:hover, #story .story-content a.explore-btn:hover {
+#intro .welcome-content a.menu-btn:hover, #story .story-content a.explore-btn:hover, #service .link a:hover, #chefs .recipe-box a:hover {
   background: #fff;
   color: #666;
   border-color: transparent;
@@ -46,11 +46,11 @@ header {
   transition: all .5s;
 }
 
-#intro .welcome-content a.menu-btn:hover:hover .icon, #story .story-content a.explore-btn:hover:hover .icon {
+#intro .welcome-content a.menu-btn:hover:hover .icon, #story .story-content a.explore-btn:hover:hover .icon, #service .link a:hover:hover .icon, #chefs .recipe-box a:hover:hover .icon {
   -webkit-transform: rotateX(360deg);
           transform: rotateX(360deg);
-  -webkit-transition: all .5s;
-  transition: all .5s;
+  -webkit-transition: all .9s;
+  transition: all .9s;
 }
 
 .title p {
@@ -527,14 +527,13 @@ header {
 }
 
 #opening {
-  padding: 125px 0;
   overflow: hidden;
 }
 
 #opening .plate {
-  background-size: cover;
+  background-size: 50% 100%;
   background-repeat: no-repeat;
-  background-position: center;
+  background-attachment: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -548,36 +547,791 @@ header {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  padding: 245px 100px;
+}
+
+#opening .plate .quote {
+  margin-bottom: 5%;
+  font-size: 50px;
+  color: #C19D60;
+  z-index: 10;
 }
 
 #opening .plate span {
   font-family: "Poppins", sans-serif;
   font-weight: 700;
+  z-index: 10;
+  margin-top: 10%;
 }
 
-#opening .plate::before {
-  content: "";
-  background-color: rgba(0, 0, 0, 0.308);
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  top: 0;
-  left: 0;
+#opening .plate p {
+  z-index: 10;
 }
 
 #opening .hours {
+  padding: 161px 0;
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-color: #292929;
+}
+
+#opening .hours::after {
+  content: '';
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  right: 50px;
+  bottom: 50px;
+  border: 1px dashed rgba(255, 255, 255, 0.2);
+  z-index: 2;
+  -webkit-box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
+          box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
+}
+
+#opening .hours .dots {
+  color: #C19D60;
+}
+
+#opening .hours .opening-info {
+  position: relative;
+  margin-bottom: 10%;
+}
+
+#opening .hours .opening-info h6 {
+  font-size: 14px;
+  font-family: "Poppins", sans-serif;
+  color: #C19D60;
+}
+
+#opening .hours .opening-info span {
+  font-size: 30px;
+  font-weight: 600;
+  font-family: "Poppins", sans-serif;
+}
+
+#opening .hours .opening-info::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 49.5%;
+  width: 10px;
+  bottom: 20px;
+  background-image: url(../images/opening/ver-separator.png);
+  background-repeat: repeat-y;
+  z-index: 10000;
+}
+
+#opening .hours .white-separator {
+  position: absolute;
+  top: 380px;
+  font-size: 50px;
+}
+
+#opening .hours .white-separator::before {
+  position: absolute;
+  content: "";
+  width: 110px;
+  left: -240px;
+  top: 55px;
+  height: 1px;
+  opacity: .5;
+  background-color: #C19D60;
+}
+
+#opening .hours .white-separator::after {
+  position: absolute;
+  content: "";
+  width: 110px;
+  left: 145px;
+  top: 55px;
+  height: 1px;
+  opacity: .5;
+  background-color: #C19D60;
+}
+
+#opening .hours .call-number {
+  z-index: 3;
+  margin-top: 9.6%;
+}
+
+#opening .hours .call-number a {
+  font-size: 28px;
+  font-weight: bold;
+  letter-spacing: 1px;
+  padding: 10px 20px;
+  text-decoration: none;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  border: 1px solid #C19D60;
+  color: #fff;
+}
+
+#opening .hours .call-number a:hover {
+  color: #C19D60 !important;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#service {
+  padding: 85px 0;
+  background-repeat: no-repeat;
+  background-position: bottom left;
+  background-size: 100%;
+  position: relative;
+}
+
+#service::after {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  bottom: 100px;
+  right: 70px;
+  border-right: 1px dotted;
+  border-bottom: 1px dotted;
+  border-color: #C19D60;
+}
+
+#service::before {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 60px;
+  top: 170px;
+  left: 70px;
+  border-top: 1px dotted;
+  border-left: 1px dotted;
+  border-color: #C19D60;
+}
+
+#service .link a {
+  color: black;
+}
+
+#service .link a:hover {
+  background-color: #C19D60;
+  color: white;
+}
+
+#service .content-box > * {
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+  -webkit-transition: 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+#service .content-box {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+}
+
+#service .content-box:hover {
+  -webkit-transition: 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+  transition: 0.9s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+}
+
+#service .content-box:hover .front-box {
+  -webkit-transform: rotateY(-180deg);
+          transform: rotateY(-180deg);
+}
+
+#service .content-box:hover .rear-box {
+  -webkit-transform: rotateY(0deg);
+          transform: rotateY(0deg);
+}
+
+#service .content-box .front-box {
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+#service .content-box .front-box-inner {
+  padding: 150px 0;
+  position: relative;
+}
+
+#service .content-box .front-box-inner::after {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-color: rgba(255, 255, 255, 0.418) !important;
+  z-index: 100000;
+  bottom: 20px;
+  right: 20px;
+  border-right: 1px dotted;
+  border-bottom: 1px dotted;
+}
+
+#service .content-box .front-box-inner::before {
+  content: '';
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  border-color: rgba(255, 255, 255, 0.418) !important;
+  z-index: 100000;
+  top: 20px;
+  left: 20px;
+  border-left: 1px dotted;
+  border-top: 1px dotted;
+}
+
+#service .content-box .front-box-inner .overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: black;
+  opacity: .3;
+}
+
+#service .content-box .front-box-inner .txt {
+  text-align: center;
+  z-index: 100000;
+}
+
+#service .content-box .front-box-inner .txt h2 {
+  position: relative;
+  position: relative;
+  font-size: 22px;
+  font-weight: 800;
+  padding-bottom: 20px;
+  z-index: 100000;
+}
+
+#service .content-box .front-box-inner .txt h2::before {
+  content: "";
+  width: 50px;
+  height: 1.5px;
+  background-color: #C19D60;
+  top: -75%;
+  left: 45%;
+  position: absolute;
+}
+
+#service .content-box .front-box-inner .txt span {
+  position: relative;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  letter-spacing: 2px;
+  z-index: 100000;
+}
+
+#service .content-box .front-box-inner .order {
+  position: absolute;
+  top: 87%;
+  left: 5%;
+}
+
+#service .content-box .front-box-inner .order span {
+  color: white;
+  font-size: 18px;
+}
+
+#service .content-box .rear-box {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  -webkit-transform: rotateY(180deg);
+          transform: rotateY(180deg);
+  -webkit-transform-style: preserve-3d;
+          transform-style: preserve-3d;
+  -webkit-perspective: 1000px;
+          perspective: 1000px;
+  -webkit-backface-visibility: hidden;
+          backface-visibility: hidden;
+}
+
+#service .content-box .rear-box-inner {
+  padding-top: 98.48px;
+  padding-bottom: 45px;
+  background-color: #292929;
+}
+
+#service .content-box .rear-box-inner .icon {
+  position: relative;
+}
+
+#service .content-box .rear-box-inner .icon::before {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 10px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  left: 140px;
+  top: 12px;
+}
+
+#service .content-box .rear-box-inner .icon::after {
+  content: '';
+  position: absolute;
+  width: 60px;
+  height: 10px;
+  border-radius: 10px;
+  background: rgba(255, 255, 255, 0.1);
+  right: 150px;
+  bottom: -12px;
+}
+
+#service .content-box .rear-box-inner .icon i {
+  font-size: 50px;
+  color: #C19D60;
+}
+
+#service .content-box .rear-box-inner p {
+  font-family: "Poppins", sans-serif;
+  margin: 10% 0;
+  padding: 0 45px;
+  font-size: 13px;
+}
+
+#service .content-box .rear-box-inner .dots {
+  margin-top: 15%;
+  color: #C19D60;
+}
+
+#service .section-footer {
+  height: 40px;
+  position: absolute;
+  left: 0;
+  z-index: 20;
+  width: 100%;
+  bottom: 0;
+}
+
+#chefs {
+  padding: 25px 0;
+}
+
+#chefs .card {
+  border-radius: 0;
+  position: relative;
+}
+
+#chefs .card::after {
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  z-index: 20;
+  bottom: 250px;
+  right: 20px;
+  border-right: 1px dotted;
+  border-bottom: 1px dotted;
+  border-color: #C19D60;
+}
+
+#chefs .card::before {
+  content: '';
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  z-index: 20;
+  top: 20px;
+  left: 20px;
+  border-left: 1px dotted;
+  border-top: 1px dotted;
+  border-color: #C19D60;
+}
+
+#chefs .card:hover .overlay {
+  visibility: visible;
+  opacity: 1;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#chefs .card img {
+  border-radius: 0;
+  position: relative;
+}
+
+#chefs .card .overlay {
+  position: absolute;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 53%;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 1;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#chefs .card .overlay p {
+  font-weight: 500;
+}
+
+#chefs .card .overlay .social-links ul li {
+  margin-right: 15px;
+}
+
+#chefs .card .overlay .social-links ul li i {
+  width: 30px;
+  height: 30px;
+  background-color: rgba(0, 0, 0, 0.629);
+  line-height: 30px;
+  text-align: center;
+  border-radius: 50%;
+  font-size: 12px;
+}
+
+#chefs .card .overlay .social-links ul li:hover i {
+  background-color: #C19D60;
+}
+
+#chefs .card .card-body .dots {
+  color: #C19D60;
+}
+
+#chefs .card .card-body h5 {
+  font-weight: 600;
+}
+
+#chefs .card .card-body span {
+  font-size: 13px;
+  color: #C19D60;
+  font-family: "Poppins", sans-serif;
+}
+
+#chefs .card .card-body p {
+  font-family: "Poppins", sans-serif;
+  font-size: 14px;
+  margin: 15px 0;
+  color: #71767C;
+}
+
+#chefs .recipe-box {
+  padding: 25px 30px;
+  background-color: #f5f5f5;
+  border: 1px solid #eee;
+  margin-top: 60px;
+}
+
+#chefs .recipe-box h4 {
+  font-style: italic;
+  margin-bottom: 7%;
+  font-weight: 300;
+}
+
+#chefs .recipe-box a {
+  background-color: #292929;
+  border: #292929;
+  margin-top: 50px;
+}
+
+#chefs .recipe-box a:hover {
+  background-color: #C19D60;
+  color: white;
+}
+
+#footer-top {
+  padding: 30px 0;
+  background-color: #292929;
+}
+
+#footer-top .inner {
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
+}
+
+#footer-top img {
+  height: 25px;
+  width: auto;
+}
+
+#footer-top .languages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  margin-bottom: 0px;
+}
+
+#footer-top .languages a {
+  font-size: 14px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+#footer-top .languages span {
+  color: white;
+}
+
+#footer-top .languages a.first-language {
+  color: #C19D60;
+  font-weight: 600;
+}
+
+#footer-top .languages a.second-language {
+  color: white;
+  font-weight: 600;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#footer-top .languages a.second-language:hover {
+  color: #C19D60;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#footer-top .social-links ul li {
+  height: 35px;
+  width: 35px;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  text-align: center;
+  line-height: 35px;
+  background: rgba(255, 255, 255, 0.05);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#footer-top .social-links ul li a i {
+  color: #C19D60;
+}
+
+#footer-top .social-links ul li:hover {
+  background-color: white;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#footer-middle {
+  background-color: #292929;
+  padding: 25px 0;
+}
+
+#footer-middle .about h4 {
+  color: #C19D60;
+  font-size: 19px;
+  font-weight: 300;
+}
+
+#footer-middle .about p {
+  font-family: "Poppins", sans-serif;
+  text-align: left;
+  margin-bottom: 15px;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 12px;
+  padding: 20px 0;
+  line-height: 25px;
+}
+
+#footer-middle .about a {
+  font-size: 14px;
+  margin-top: 6px;
+  position: relative;
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.3);
+  padding-bottom: 4px;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  color: #C19D60;
+  text-decoration: none;
+}
+
+#footer-middle .about a:hover {
+  color: white;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+#footer-middle .call h4 {
+  color: #C19D60;
+  font-size: 19px;
+  font-weight: 300;
+  margin-bottom: 30px;
+}
+
+#footer-middle .call ul li {
+  color: white;
+  font-family: "Poppins", sans-serif;
+  font-size: 13px;
+  margin-top: 15px;
+}
+
+#footer-middle .call ul li span {
+  width: 80px;
+  display: inline-block;
+  margin-right: 20px;
+}
+
+#footer-middle .call ul li a {
+  color: white;
+  text-transform: none;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  text-decoration: none;
+}
+
+#footer-middle .call ul li a:hover {
+  color: #C19D60;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+#footer-middle .call a.touch {
+  font-size: 14px;
+  margin-top: 6px;
+  position: relative;
+  border-bottom: 1px dotted rgba(255, 255, 255, 0.3);
+  padding-bottom: 4px;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  color: #C19D60;
+  text-decoration: none;
+}
+
+#footer-middle .call a.touch:hover {
+  color: white;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+}
+
+#footer-middle .sub h4 {
+  color: #C19D60;
+  font-size: 19px;
+  font-weight: 300;
+}
+
+#footer-middle .sub p {
+  font-family: "Poppins", sans-serif;
+  text-align: left;
+  margin-bottom: 15px;
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 12px;
+  padding: 20px 0;
+  line-height: 25px;
+}
+
+#footer-middle .sub input[type="email"] {
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  background: rgba(255, 255, 255, 0.05);
+  padding: 23px 20px;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  outline: none;
+  border-radius: 0;
+}
+
+#footer-middle .sub input[type="email"]::-webkit-input-placeholder {
+  font-size: 13px;
+}
+
+#footer-middle .sub input[type="email"]:-ms-input-placeholder {
+  font-size: 13px;
+}
+
+#footer-middle .sub input[type="email"]::-ms-input-placeholder {
+  font-size: 13px;
+}
+
+#footer-middle .sub input[type="email"]::placeholder {
+  font-size: 13px;
+}
+
+#footer-middle .sub input[type="email"]:focus {
+  -webkit-box-shadow: none !important;
+          box-shadow: none !important;
+}
+
+#footer-middle .sub button[type=submit] {
+  font-family: "Poppins", sans-serif;
+  color: #fff;
+  outline: none;
+  border: none;
+  cursor: pointer;
+  border-radius: 0;
+  background-color: #C19D60;
+  padding: 12px 35px;
+}
+
+#footer-middle .sub button[type=submit]:hover {
+  background-color: white;
+  color: #C19D60;
+}
+
+#footer-bottom {
+  background-color: #222222;
+}
+
+#footer-bottom .copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-line-pack: center;
+      align-content: center;
+}
+
+#footer-bottom .copyright p {
+  font-size: 13px;
+  padding: 15px 0;
+}
+
+#footer-bottom .copyright .back {
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  padding: 15px 0;
+  text-align: center;
+}
+
+#footer-bottom .copyright .back a {
+  text-decoration: none;
+  color: #C19D60;
+  font-size: 13px;
+}
+
+#footer-bottom .copyright .back i {
+  color: #C19D60;
+  font-size: 13px;
+  display: none;
+  margin-right: 50%;
+}
+
+#footer-bottom .copyright .back:hover a {
+  display: none;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+}
+
+#footer-bottom .copyright .back:hover i {
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
+  display: block;
+  cursor: pointer;
 }
 /*# sourceMappingURL=style.css.map */
