testimonial done but store section needs development

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,4 +8,6 @@
 @import "./partials/opening";
 @import "./partials/service";
 @import "./partials/chefs";
+@import "./partials/store";
+@import "./partials/testimonial";
 @import "./partials/footer";
