--- a/assets/scss/style.css
+++ b/assets/scss/style.css
@@ -17,7 +17,7 @@ header {
   max-width: 1245px !important;
 }
 
-#intro .welcome-content a.menu-btn, #story .story-content a.explore-btn, #service .link a, #chefs .recipe-box a {
+#intro .welcome-content a.menu-btn, #story .story-content a.explore-btn, #service .link a, #chefs .recipe-box a, #store .buy a.onlineBtn {
   padding: 13px 28px;
   background: rgba(255, 255, 255, 0.1);
   border: 1px solid #C19D60;
@@ -32,11 +32,11 @@ header {
   outline: 0;
 }
 
-#intro .welcome-content a.menu-btn .icon, #story .story-content a.explore-btn .icon, #service .link a .icon, #chefs .recipe-box a .icon {
+#intro .welcome-content a.menu-btn .icon, #story .story-content a.explore-btn .icon, #service .link a .icon, #chefs .recipe-box a .icon, #store .buy a.onlineBtn .icon {
   margin-left: 15px;
 }
 
-#intro .welcome-content a.menu-btn:hover, #story .story-content a.explore-btn:hover, #service .link a:hover, #chefs .recipe-box a:hover {
+#intro .welcome-content a.menu-btn:hover, #story .story-content a.explore-btn:hover, #service .link a:hover, #chefs .recipe-box a:hover, #store .buy a.onlineBtn:hover {
   background: #fff;
   color: #666;
   border-color: transparent;
@@ -46,7 +46,7 @@ header {
   transition: all .5s;
 }
 
-#intro .welcome-content a.menu-btn:hover:hover .icon, #story .story-content a.explore-btn:hover:hover .icon, #service .link a:hover:hover .icon, #chefs .recipe-box a:hover:hover .icon {
+#intro .welcome-content a.menu-btn:hover:hover .icon, #story .story-content a.explore-btn:hover:hover .icon, #service .link a:hover:hover .icon, #chefs .recipe-box a:hover:hover .icon, #store .buy a.onlineBtn:hover:hover .icon {
   -webkit-transform: rotateX(360deg);
           transform: rotateX(360deg);
   -webkit-transition: all .9s;
@@ -1055,6 +1055,231 @@ header {
   color: white;
 }
 
+#store {
+  padding: 25px 0;
+  overflow: hidden;
+}
+
+#store .events {
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
+  background-color: #292929;
+  padding: 150px 0;
+}
+
+#store .events::after {
+  content: '';
+  position: absolute;
+  top: 50px;
+  left: 50px;
+  right: 50px;
+  bottom: 50px;
+  border: 1px dashed rgba(255, 255, 255, 0.2);
+  z-index: 2;
+  -webkit-box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
+          box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
+}
+
+#store .events .dots {
+  color: #C19D60;
+}
+
+#store .buy {
+  background-size: 50% 100%;
+  background-position: right;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 150px 100px;
+}
+
+#store .buy h1 {
+  color: #C19D60;
+}
+
+#store .buy p {
+  color: white;
+  font-style: italic;
+  font-size: 20px;
+}
+
+#store .buy a.onlineBtn {
+  background-color: #292929;
+  color: white;
+  border: #292929;
+}
+
+#store .buy a.onlineBtn:hover {
+  background-color: #C19D60;
+  color: white;
+}
+
+#testimonial {
+  overflow: hidden;
+  padding: 25px 0;
+}
+
+#testimonial .carousel {
+  padding: 50px 0;
+}
+
+#testimonial .slick-next {
+  width: 30px;
+  height: 30px;
+  line-height: 52px;
+  text-align: center;
+  border-radius: 50%;
+  right: -5px;
+  background: black;
+}
+
+#testimonial .slick-next::before {
+  color: #C19D60;
+}
+
+#testimonial .slick-prev {
+  width: 30px;
+  height: 30px;
+  line-height: 52px;
+  text-align: center;
+  border-radius: 50%;
+  left: 5px;
+  z-index: 10;
+  background: black;
+}
+
+#testimonial .slick-prev::before {
+  color: #C19D60;
+}
+
+#testimonial .slider {
+  padding: 25px;
+  overflow: hidden;
+  background: #fff;
+  border: 1px solid #eee;
+  margin: 0 20px;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#testimonial .slider i {
+  color: #C19D60;
+  font-size: 25px;
+}
+
+#testimonial .slider .rating i {
+  font-size: 15px;
+  margin-top: 15px;
+}
+
+#testimonial .slider p {
+  color: #878C9F;
+  font-size: 14px;
+  font-style: italic;
+  margin: 25px 0;
+  padding-bottom: 10px;
+  font-weight: 500;
+}
+
+#testimonial .slider .image-box {
+  width: 80px;
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
+  border: 1px solid #eee;
+  border-radius: 50%;
+}
+
+#testimonial .slider .image-box img {
+  width: 60px;
+  height: 60px;
+  text-align: center;
+  line-height: 60px;
+  border-radius: 50%;
+}
+
+#testimonial .slider .footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+#testimonial .slider .footer .dots {
+  color: #C19D60;
+  margin: 0 150px;
+}
+
+#testimonial .slider .footer span {
+  color: #C19D60;
+}
+
+#testimonial .onscreen {
+  background-color: #f9f9f9;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
+}
+
+#testimonial .slick-dots {
+  bottom: -10px;
+}
+
+#testimonial .slick-dots li.slick-active button {
+  background: #C19D60;
+  position: relative;
+}
+
+#testimonial .slick-dots li.slick-active button::before {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+  top: -5px;
+  left: -5px;
+  border: 1px solid #ccc;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
+#testimonial .slick-dots li button {
+  opacity: 1;
+  background: #ccc;
+  margin: 0 10px;
+  display: inline-block;
+  width: 6px;
+  height: 6px;
+  position: relative;
+  border-radius: 100%;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
+#testimonial .slick-dots li button::before {
+  content: '';
+  position: absolute;
+  border-radius: 50%;
+  top: -5px;
+  left: -5px;
+  border: white;
+  -webkit-transition: all 300ms ease-out;
+  transition: all 300ms ease-out;
+}
+
 #footer-top {
   padding: 30px 0;
   background-color: #292929;
@@ -1062,6 +1287,9 @@ header {
 
 #footer-top .inner {
   border-bottom: 1px dotted rgba(255, 255, 255, 0.2);
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 #footer-top img {
@@ -1293,8 +1521,6 @@ header {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  -ms-flex-line-pack: center;
-      align-content: center;
 }
 
 #footer-bottom .copyright p {
@@ -1307,6 +1533,7 @@ header {
   transition: 0.6s;
   padding: 15px 0;
   text-align: center;
+  cursor: pointer;
 }
 
 #footer-bottom .copyright .back a {
@@ -1318,12 +1545,15 @@ header {
 #footer-bottom .copyright .back i {
   color: #C19D60;
   font-size: 13px;
-  display: none;
-  margin-right: 50%;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: 0.6s;
+  transition: 0.6s;
 }
 
 #footer-bottom .copyright .back:hover a {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
   -webkit-transition: 0.6s;
   transition: 0.6s;
 }
@@ -1331,7 +1561,7 @@ header {
 #footer-bottom .copyright .back:hover i {
   -webkit-transition: 0.6s;
   transition: 0.6s;
-  display: block;
-  cursor: pointer;
+  visibility: visible;
+  opacity: 1;
 }
 /*# sourceMappingURL=style.css.map */
