--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,6 +7,7 @@
 @import "./partials/story";
 @import "./partials/opening";
 @import "./partials/service";
+@import "./partials/specialities";
 @import "./partials/chefs";
 @import "./partials/store";
 @import "./partials/testimonial";
