--- a/assets/scss/partials/_store.scss
+++ b/assets/scss/partials/_store.scss
@@ -1,62 +1,153 @@
-#store{
-    padding: 25px 0;
-    overflow: hidden;
+#store {
+  padding: 25px 0;
+  overflow: hidden;
 
-    .events{
+  .events {
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-color: #292929;
+    padding: 112px 0;
+    display: flex;
+    flex-direction: column;
 
-        background-size: 100% 100%;
-        background-repeat: no-repeat;
-        background-color: #292929;
-        padding: 150px 0;
+    &::after {
+      content: "";
+      position: absolute;
+      top: 50px;
+      left: 50px;
+      right: 50px;
+      bottom: 50px;
+      border: 1px dashed rgba(255, 255, 255, 0.2);
+      z-index: 2;
+      box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
+    }
 
-        &::after{
-            content: '';
-            position: absolute;
-            top: 50px;
-            left: 50px;
-            right: 50px;
-            bottom: 50px;
-            border: 1px dashed rgba(255,255,255,0.2);
-            z-index: 2;
-             box-shadow: 0px 0px 0px 50px rgba(114, 113, 113, 0.089);
-            }
+    .dots {
+      color: $mainColor;
+    }
 
-        .dots{
+    .slider {
+        padding: 0 50px;
+        z-index: 20;
+      .event {
+        .inner-event
+        {
+          p {
+            color: rgba(255, 255, 255, 0.7);
+            font-weight: 400;
+            font-size: 11px;
+            text-align: center;
+            font-family: $secondaryFont;
+            padding: 0 40px;
+          }
+
+          span {
             color: $mainColor;
+            font-size: 11px;
+            font-family: $secondaryFont;
+            font-weight: 500;
+          }
         }
+      }
+
+      .slick-next{
+        width: 30px;
+        height: 30px;
+        line-height: 52px;
+        text-align: center;
+        border-radius: 50%;
+        right: 35px;
+
+
+        &::before{
+          color: $mainColor;
+        }
+
+        background: black;
     }
 
-    .buy{
-        background-size: 50% 100%;
-        background-position: right;
-        background-repeat: no-repeat;
-        background-attachment:fixed;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        padding: 150px 100px;
+    .slick-prev{
+        width: 30px;
+        height: 30px;
+        line-height: 52px;
+        text-align: center;
+        border-radius: 50%;
+        left: 35px;
+        z-index: 10;
 
-        h1{
-            color: $mainColor
+
+        &::before{
+          color: $mainColor;
         }
 
-        p{
-            color: white;
-            font-style: italic;
-            font-size: 20px
-        }
-
-        a.onlineBtn{
-            @extend %mainbtn;
-            background-color: #292929;
-            color: white;
-            border: #292929;
-
-            &:hover{
-                background-color: $mainColor;
-                color: white;
-            }
-        }
+        background: black;
     }
+    }
+
+    .white-separator2 {
+      position: absolute;
+      top: 360px;
+      font-size: 50px;
+
+      &::before {
+        position: absolute;
+        content: "";
+        width: 110px;
+        left: -220px;
+        top: 55px;
+        height: 1px;
+        opacity: 0.5;
+        background-color: $mainColor;
+      }
+
+      &::after {
+        position: absolute;
+        content: "";
+        width: 110px;
+        left: 120px;
+        top: 55px;
+        height: 1px;
+        opacity: 0.5;
+        background-color: $mainColor;
+      }
+    }
+
+    a.bookbtn {
+      @extend %mainbtn;
+    }
+  }
+
+  .buy {
+    background-size: 50% 100%;
+    background-position: right;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 200px 0 ;
+
+    h1 {
+      color: $mainColor;
+    }
+
+    p {
+      color: white;
+      font-style: italic;
+      font-size: 20px;
+    }
+
+    a.onlineBtn {
+      @extend %mainbtn;
+      background-color: #292929;
+      color: white;
+      border: #292929;
+
+      &:hover {
+        background-color: $mainColor;
+        color: white;
+      }
+    }
+  }
 }
